--- a/search.html
+++ b/search.html
@@ -2,79 +2,34 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is an ajax search</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="./main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-        #result {
-            position: absolute;
-            width: 100%;
-            max-width: 870px;
-            cursor: pointer;
-            overflow-y: auto;
-            max-height: 400px;
-            box-sizing: border-box;
-            z-index: 1001;
-        }
+    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
+    <script defer src="./main.js"></script>
 
-        .link-class:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
 </head>
 
 <body>
     <br /><br />
-    <div class="container" style="width: 900px;">
-        <h2 align="center">Search here:</h2>
-        <h3 align="center">Marketing Lead Source</h3>
-        <br /><br />
-        <div align="center">
-            <input type="text" name="search" id="search" placeholder="Marketing Lead Source" class="form-control" autocomplete="off" />
+    <div class="uk-container-large">
+        <h1>Marketing Lead Source</h1>
+            <div class="uk-width-1-1">
+            <input class="uk-input" type="text" name="search-item" id="search-item" placeholder="Search Here for Lead Source" autocomplete="off" />
+            <ul class="uk-list uk-width-1-1" id="result"></ul>
         </div>
-        <ul class="list-group" id="result"></ul>
-        <br />
+        <br>
+        <div class="uk-width-1-1">
+            <input class="uk-input" type="text" name="results-input" id="results-input" placeholder="Results" multiple disabled/>  
+        </div>
+          <button type="button" class="uk-button uk-button-default uk-width-1-2">Submit Results</button>
+        </div>
+
     </div>
 </body>
 
 </html>
 
-<script>
-    $(document).ready(function () {
-        $.ajaxSetup({
-            cache: false,
-            type: 'GET',
-            dataType: 'jsonp',
-            crossDomain: true,
-            isLocal: true,
-
-        
-        });
-        $("#search").keyup(function () {
-            $("#result").html("");
-            $("#state").val("");
-            var searchField = $("#search").val();
-            var expression = new RegExp(searchField, "i");
-            $.getJSON("leadChannel.json", function (data) {
-                $.each(data, function (key, value) {
-                    if (
-                        value.name.search(expression) != -1
-                        ) {
-                        $("#result").append(
-                            '<li class="list-group-item link-class">' 
-                            + value.name + "</li>"
-                        );
-                    }
-                });
-            });
-        });
-
-        $("#result").on("click", "li", function () {
-            var click_text = $(this).text().split("|");
-            $("#search").val($.trim(click_text[0]));
-            $("#result").html("");
-        });
-    });
-
-</script>
